# s3-bucket-operator

./: README.md  docker-compose.yaml  pyproject.toml
.kube/: config
auto/: kubectl
manifests/s3-bucket-operator/: configmap.yaml  controller.yaml  crd.yaml  namespace.yaml  webhook.yaml
s3-bucket-operator/: s3_bucket_model.py  sync.py
